Advance of styles

--- a/index.html
+++ b/index.html
@@ -15,35 +15,61 @@
     <title>My team page</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
-      </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+    <main>
+      <section class="description">
+        <h1>The creative crew</h1>
+        <div class="information">
+          <p class="title">Who we are</p>
+          <p>We are team of creatively diverse.  driven.  innovative individuals working in various locations from the world.</p>
+        </div>
+      </section>
+      <section class="image-container">
+        <div class="card">
+          <div>
+            <img src="./images/photo1.png" alt="">
+            <p class="name">Bill Mahoney</p>
+          </div>
+          <p class="position">Product owner</p>
+        </div>
+        <div class="card">
+          <div>
+            <img src="./images/photo2.png" alt="">
+            <p class="name">Saba Cabrera</p>
+          </div>
+          <p class="position">Art director</p>
+        </div>
+        <div class="card">
+          <div>
+            <img src="./images/photo3.png" alt="">
+            <p class="name">Shae Le</p>
+          </div>
+          <p class="position">Tech Lead</p>
+        </div>
+        <div class="card">
+          <div>
+            <img src="./images/photo4.png" alt="">
+            <p class="name">Skylah Lu</p>
+          </div>
+          <p class="position">UX Designer</p>
+        </div>
+        <div class="card">
+          <div>
+            <img src="./images/photo5.png" alt="">
+            <p class="name">Griff Richards</p>
+          </div>
+          <p class="position">Developer</p>
+        </div>
+        <div class="card">
+          <div>
+            <img src="./images/photo6.png" alt="">
+            <p class="name">Stan John</p>
+          </div>
+          <p class="position">Deverloper</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>created by <a href="">FatimaGR</a> - devChallenges.io</p>
+    </footer>
   </body>
 </html>
