--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
       content="width=device-width, initial-scale=1,
   maximum-scale=5"
     />
-
     <link rel="icon" href="./images/devchallenges.png"/>
-
     <link rel="stylesheet" href="styles.css">
-
     <title>My team page</title>
   </head>
   <body>
@@ -64,7 +61,7 @@
             <img src="./images/photo6.png" alt="">
             <p class="name">Stan John</p>
           </div>
-          <p class="position">Deverloper</p>
+          <p class="position">Developer</p>
         </div>
       </section>
     </main>
