--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       </section>
     </main>
     <footer>
-      <p>created by <a href="">FatimaGR</a> - devChallenges.io</p>
+      <p>created by 
+        <a href="https://devchallenges.io/portfolio/FatimaGR">FatimaGR</a> 
+        - devChallenges.io</p>
     </footer>
   </body>
 </html>
